# notes

./: Cargo.toml
public/: styles.css
