[package]
name = "share"
version = "0.1.1"
edition = "2021"

[dependencies]
#tokio = "1.28.2"

axum = { version = "0.6.18", features = ["multipart"] }
http = "0.2.9"
http-body = "0.4.5"
once_cell = "1.18.0"
pbkdf2 = "0.12.1"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
sqlx = { version = "0.7.0", features = ["postgres", "runtime-tokio-native-tls"] }
tera = { version = "1.19.0", default_features = false }
sync_wrapper = "0.1.2"
shuttle-service = { version = "0.20.0" }
shuttle-shared-db = { version = "0.20.0", features = ["postgres"] }
cookie = "0.17.0"